--- a/invoker/invoker-dummy-webservice/pom.xml
+++ b/invoker/invoker-dummy-webservice/pom.xml
@@ -67,59 +67,64 @@
 							<groupId>org.apache.cxf</groupId>
 							<artifactId>cxf-rt-frontend-simple</artifactId>
 							<version>${cxf.version}</version>
-                                                </dependency>
-                                        </dependencies>
-                                </plugin>
+						</dependency>
+					</dependencies>
+				</plugin>
 
-                                <!--plugin>
-                                        <groupId>org.apache.cxf</groupId>
-                                        <artifactId>cxf-java2ws-plugin</artifactId>
-                                        <executions>
-                                                <execution>
-                                                        <id>process-classes</id>
-                                                        <phase>process-classes</phase>
-                                                        <configuration>
-                                                                <className>at.sti2.ngsee.invoker.dummy.webservice.PingWebService</className>
-                                                                <<genServer>true</genServer>>
-                                                                <genWsdl>true</genWsdl>
-                                                                <verbose>true</verbose>
-                                                                <argline>-s ${project.build.directory}/generated-sources/</argline>
-                                                        </configuration>
-                                                        <goals>
-                                                                <goal>java2ws</goal>
-                                                        </goals>
-                                                </execution>
-                                        </executions>
-                                </plugin-->
+				<plugin>
+					<groupId>org.apache.cxf</groupId>
+					<artifactId>cxf-java2ws-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>process-classes</id>
+							<phase>process-classes</phase>
+							<configuration>
+								<className>at.sti2.ngsee.invoker.dummy.webservice.PingWebService</className>
+								<genServer>true</genServer>
+								<genWsdl>true</genWsdl>
+								<verbose>true</verbose>
+								<argline>-s ${project.build.directory}/generated-sources/</argline>
+							</configuration>
+							<goals>
+								<goal>java2ws</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 
-                                <plugin>
-                                        <groupId>org.mortbay.jetty</groupId>
-                                        <artifactId>maven-jetty-plugin</artifactId>
-                                        <configuration>
-                                                <scanIntervalSeconds>10</scanIntervalSeconds>
-                                                <connectors>
-                                                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                                                                <port>9090</port>
-                                                                <maxIdleTime>60000</maxIdleTime>
-                                                        </connector>
-                                                </connectors>
-                                        </configuration>
-                                </plugin>
+				<plugin>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>maven-jetty-plugin</artifactId>
+					<configuration>
+						<scanIntervalSeconds>10</scanIntervalSeconds>
+						<connectors>
+							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+								<port>9090</port>
+								<maxIdleTime>60000</maxIdleTime>
+							</connector>
+						</connectors>
+					</configuration>
+				</plugin>
 
-                        </plugins>
-                </pluginManagement>
-        </build>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 
-        <dependencies>
-                <dependency>
-                        <groupId>org.apache.cxf</groupId>
-                        <artifactId>cxf-rt-frontend-jaxws</artifactId>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.cxf</groupId>
-                        <artifactId>cxf-rt-transports-http</artifactId>
-                </dependency>
-        </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>edu.uga.cs.lsdis</groupId>
+			<artifactId>SAWSDL4J</artifactId>
+			<version>M4</version>
+		</dependency>
+	</dependencies>
 
 </project>
