--- a/util/util-triplestore-client/pom.xml
+++ b/util/util-triplestore-client/pom.xml
@@ -2,6 +2,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sesame.version>2.6.1</sesame.version>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -22,17 +23,17 @@
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-runtime</artifactId>
-			<version>2.4.2</version>
+			<version>${sesame.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryresultio-sparqlxml</artifactId>
-			<version>2.4.2</version>
+			<version>${sesame.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryresultio-sparqljson</artifactId>
-			<version>2.4.2</version>
+			<version>${sesame.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
