--- a/registration/registration-core/pom.xml
+++ b/registration/registration-core/pom.xml
@@ -3,13 +3,13 @@
 
 	<groupId>at.sti2.ngsee.registration</groupId>
 	<artifactId>registration-core</artifactId>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.sti2.ngsee.registration</groupId>
 		<artifactId>registration-project</artifactId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
