--- a/invoker/invoker-dummy-webservice/pom.xml
+++ b/invoker/invoker-dummy-webservice/pom.xml
@@ -52,7 +52,7 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 				</plugin>
-				<plugin>
+				<!--plugin>
 					<groupId>org.apache.cxf</groupId>
 					<artifactId>cxf-java2ws-plugin</artifactId>
 					<version>${cxf.version}</version>
@@ -68,7 +68,7 @@
 							<version>${cxf.version}</version>
 						</dependency>
 					</dependencies>
-				</plugin>
+				</plugin-->
 
 				<plugin>
 					<groupId>org.apache.cxf</groupId>
