--- a/registration/registration-core/pom.xml
+++ b/registration/registration-core/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>at.sti2.ngsee.registration</groupId>
 	<artifactId>registration-core</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
@@ -55,6 +55,11 @@
                         <version>1.6.2</version>
                 </dependency>
                 <dependency>
+                        <groupId>org.ow2.easywsdl</groupId>
+                        <artifactId>easywsdl-ext-wsdl4complexwsdl</artifactId>
+                        <version>2.1</version>
+                </dependency>
+                <dependency>
                         <groupId>edu.uga.cs.lsdis</groupId>
                         <artifactId>SAWSDL4J</artifactId>
                         <version>M4</version>
@@ -65,15 +70,15 @@
                         <version>1.1</version>
                 </dependency>
                 <dependency>
-						<groupId>net.sf.saxon</groupId>
-						<artifactId>saxon</artifactId>
-						<version>8.7</version>
-				</dependency>
-				<dependency>
-						<groupId>net.sf.saxon</groupId>
-						<artifactId>saxon-dom</artifactId>
-						<version>8.7</version>
-				</dependency>
+                        <groupId>net.sf.saxon</groupId>
+                        <artifactId>saxon</artifactId>
+                        <version>8.7</version>
+                </dependency>
+                <dependency>
+                        <groupId>net.sf.saxon</groupId>
+                        <artifactId>saxon-dom</artifactId>
+                        <version>8.7</version>
+                </dependency>
                 <dependency>
                         <groupId>at.sti2.ngsee.util</groupId>
                         <artifactId>util-triplestore-client</artifactId>
