--- a/registration/registration-webservice/pom.xml
+++ b/registration/registration-webservice/pom.xml
@@ -14,12 +14,11 @@
 	</parent>
 
 	<name>registration-webservice</name>
-	<url>http://maven.apache.org</url>
+	<url>http://sesa.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
@@ -44,39 +43,18 @@
 
 		<pluginManagement>
 			<plugins>
+
 				<plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>tomcat-maven-plugin</artifactId>
-					<version>1.0-beta-1</version>
-					<configuration>
-						<server>myTomcat</server>
-						<path>/${project.build.finalName}</path>
-						<!--url>Place URL if different from http://localhost:8080/manager</url -->
-					</configuration>
 				</plugin>
 
 				<!-- Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., 
 					the Java classes created by running wsdl2java or wsimport), as this JAR will 
 					also be used by the SOAP client. -->
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2-beta-1</version>
-					<configuration>
-						<descriptors>
-							<descriptor>src/assembly/jaxws-jar.xml</descriptor>
-						</descriptors>
-						<appendAssemblyId>true</appendAssemblyId>
-						<attach>true</attach>
-					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 
 				<plugin>
@@ -95,28 +73,11 @@
 							<version>${cxf.version}</version>
 						</dependency>
 					</dependencies>
-					<executions>
-						<execution>
-							<id>process-classes</id>
-							<phase>process-classes</phase>
-							<configuration>
-								<className>at.sti2.ngsee.registration.webservice.RegistrationWebService</className>
-								<!--<genServer>true</genServer> -->
-								<genWsdl>true</genWsdl>
-								<verbose>true</verbose>
-								<!--<argline>-s ${project.build.directory}/generated-sources/</argline> -->
-							</configuration>
-							<goals>
-								<goal>java2ws</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>maven-jetty-plugin</artifactId>
-					<version>6.1.10</version>
 					<configuration>
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<connectors>
@@ -132,14 +93,15 @@
 		</pluginManagement>
 	</build>
 
+
 	<dependencies>
 		<dependency>
-			<groupId>at.sti2.ngsee.registration</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>registration-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>at.sti2.ngsee.registration</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>registration-core</artifactId>
 			<scope>compile</scope>
 		</dependency>
@@ -154,4 +116,3 @@
 	</dependencies>
 
 </project>
-
