--- a/util/util-triplestore-client/src/main/resources/log4j.properties
+++ b/util/util-triplestore-client/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=ERROR
-log4j.logger.to.networld.sigimera=TRACE, S
+log4j.logger.at.sti2.util=ERROR, S
 
 log4j.appender.S=org.apache.log4j.ConsoleAppender
 log4j.appender.S.layout=org.apache.log4j.PatternLayout
