--- a/invocation/core/pom.xml
+++ b/invocation/core/pom.xml
@@ -22,7 +22,12 @@
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>util.triplestore.client</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>monitoring.core</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -37,6 +42,12 @@
 			<groupId>javax.xml</groupId>
 			<artifactId>jaxrpc</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>commons-discovery</groupId>
