--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,11 @@
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
+				<artifactId>monitoring.core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+						<dependency>
+				<groupId>${project.groupId}</groupId>
 				<artifactId>invocation.grounding</artifactId>
 				<version>${project.version}</version>
 			</dependency>
