--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<module>invocation</module>
 		<module>dashboard</module>
 		<module>monitoring</module>
-		<!-- <module>ranking</module> -->
+		<module>ranking</module>
 	</modules>
 
 	<properties>
