--- a/invocation/core/src/test/resources/WEB-INF/web.xml
+++ b/invocation/core/src/test/resources/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
   <servlet-mapping>
     <servlet-name>jersey-services</servlet-name>
-    <url-pattern>/services/*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
 </web-app>
