--- a/ranking/core/src/test/resources/default.properties
+++ b/ranking/core/src/test/resources/default.properties
@@ -3,3 +3,16 @@
 ###########################
 ranking.triplestore.endpoint = ${ranking.triplestore.endpoint}
 ranking.triplestore.reposid = ${ranking.triplestore.reposid}
+
+######################################
+# Triplestore Access Information
+######################################
+invocation.sesame.endpoint = ${invocation.sesame.endpoint}
+invocation.sesame.reposid = ${invocation.sesame.reposid}
+
+############################
+# Invocation Information
+###########################
+monitoring.triplestore.endpoint = ${monitoring.triplestore.endpoint}
+monitoring.triplestore.reposid = ${monitoring.triplestore.reposid}
+monitoring.instance.prefixuri = ${monitoring.instance.prefixuri}
